[package]
name = "seismicbft-application"
version.workspace = true
edition.workspace = true

[dependencies]
seismicbft-syncer.workspace = true
seismicbft-types.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-runtime.workspace = true

futures.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-transport-http.workspace = true
alloy-rpc-client.workspace = true
tower.workspace = true
rand.workspace = true

http-body-util = "0.1.3"

